# cookiecutter-neuroally-ai

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
neuroally_ai/: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  config.py  environment.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/: .env.example  .gitattributes  .gitignore  .gitignore   CODE_OF_CONDUCT.md  CODE_REVIEW_AND_FIXES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.py  cookiecutter.json  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_full.txt
{{cookiecutter.project_slug}}/.github/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  config.yml  feature_request.md
{{cookiecutter.project_slug}}/data/: README.md
{{cookiecutter.project_slug}}/docs/: changelog.md  configuration.md  contributing.md  getting_started.md  index.md  introduction.md  license.md
{{cookiecutter.project_slug}}/docs/api/: index.md
{{cookiecutter.project_slug}}/docs/userguide/: index.md
{{cookiecutter.project_slug}}/licences/: Apache-2.0.txt
{{cookiecutter.project_slug}}/licenses/: MIT.txt
{{cookiecutter.project_slug}}/notebooks/: README.md  example.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  main.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_example.py
